--- a/expanding-cards/style.css
+++ b/expanding-cards/style.css
@@ -23,14 +23,18 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: white;
     height: 80vh;
     border-radius: 50px;
+    color: white;
     cursor: pointer;
     flex: 0.5;
     margin: 10px;
     position: relative;
     transition: all 700ms ease-in;
+}
+
+.panel:hover {
+    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.272);
 }
 
 .panel h3 {
@@ -42,11 +46,12 @@ body {
     opacity: 0;
 }
 
-.panel .active {
+.panel.active {
     flex: 5;
+    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.361);
 }
 
-.panel .active h3 {
+.panel.active h3 {
     opacity: 1;
     transition: opacity 0.3s ease-in 0.4s;
 }
